--- a/seminar/seminar_1/task_1/form.html
+++ b/seminar/seminar_1/task_1/form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -15,12 +16,12 @@
     <h1>Оставить заявку</h1>
 
     <form action="#">
-        <label for="name">Введите имя</label>
-        <input type="text" id="name" placeholder="Введите имя"><br>
+        <label for="name">Введите имя</label >
+        <input class="input-style" type="text" id="name" placeholder="Введите имя"><br>
         <label for="mail">Почтовый ящик</label>
-        <input type="email" id="mail" placeholder="Введите почту"><br>
-        <input type="submit" value="Отправить форму" />
-        <input type="reset" value="Стереть форму" />
+        <input class="input-style"  type="email" id="mail" placeholder="Введите почту"><br>
+        <input class="form-button" type="submit" value="Отправить форму" />
+        <input class="form-button"  type="reset" value="Стереть форму" />
     </form>
 
 </body>
