--- a/seminar/seminar_1/task_1/index.html
+++ b/seminar/seminar_1/task_1/index.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <a href="./index.html">Main</a>
-    <a href="./info/about.html">About me</a>
-    <a href="./form.html">Form</a>
+    <a class="nav-link" href="./index.html">Main</a>
+    <a class="nav-link" href="./info/about.html">About me</a>
+    <a class="nav-link" href="./form.html">Form</a>
     
-    <h1>Моя первая html страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+    <h1 class="main-header">Моя первая html страница</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
         Tempora nemo ullam recusandae culpa, debitis molestias repellat deleniti
         error ut vel doloribus consequatur labore quasi itaque eveniet tempore accusantium. Sit, doloremque?</p>
-    <h2>Заголовок 2 уровня</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sunt quae, magnam aperiam architecto id tempore
+    <h2 class="sub-header">Заголовок 2 уровня</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sunt quae, magnam aperiam architecto id tempore
         fuga
         facere hic voluptatum illum, itaque rerum, accusamus consequuntur eum molestiae eos. Non, veniam.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium cum culpa vel modi doloremque atque sint
+    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium cum culpa vel modi doloremque atque sint
         voluptates saepe velit assumenda necessitatibus odit, molestiae, cupiditate enim eligendi minima. Quod, enim
         perferendis.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus, nulla? Impedit mollitia quibusdam, nobis neque 
+    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus, nulla? Impedit mollitia quibusdam, nobis neque 
         tempora vitae architecto quasi earum porro ipsam fuga. Ducimus laborum maiores, eius incidunt tempore dolore!</p>
         
 
