--- a/seminar/seminar_1/task_1/info/about.html
+++ b/seminar/seminar_1/task_1/info/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -13,9 +14,8 @@
     <a href="../form.html">Form</a>
 
     <h1>About me</h1>
-    <img src="../img/close-up-pupils-doing-japanese-calligraphy-called-shodo.jpg" alt="Japan family" width="800"
-        sizes="800">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda alias eaque praesentium cumque illum in
+    <img class="img-style" src="../img/close-up-pupils-doing-japanese-calligraphy-called-shodo.jpg" alt="Japan family">
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda alias eaque praesentium cumque illum in
         voluptatem nemo
         inventore excepturi, culpa quae vero at eos neque aspernatur ab cum quos numquam quasi unde porro ad.
         Exercitationem
@@ -35,12 +35,12 @@
         mollitia esse
         commodi molestias unde fuga reprehenderit consequuntur dolores. Inventore?</p>
 
-    <a href="https://www.mail.ru"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16"
+    <a href="https://www.mail.ru"><svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
             viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
             <path
                 d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
         </svg></a>
-    <a href="https://www.gb.ru"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="18"
+    <a href="https://www.gb.ru"><svg xmlns="http://www.w3.org/2000/svg" height="18" width="18"
             viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
             <path
                 d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
