--- a/home_work/home_work_1/catalog/catalog.html
+++ b/home_work/home_work_1/catalog/catalog.html
@@ -5,61 +5,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="./catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
+    <ol>
+        <li>
+            <a class="menu-navigation-link"  href="../index.html">Главная</a>
+        </li>
+        <li>
+            <a class="menu-navigation-link"  href="./catalog.html">Каталог</a>
+        </li>
+        <li>
+            <a class="menu-navigation-link"  href="#">Контакты</a>
+        </li>
+    </ol>
 
-    <h1>Каталог</h1>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quasi excepturi minus velit doloribus<br/> 
+
+
+    <h1 class="all-main-headers">Каталог</h1>
+
+    <p class="all-paragraphs">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quasi excepturi minus velit doloribus<br />
         assumenda
-        culpa ratione commodi aliquid iusto adipisci, impedit cupiditate animi quibusdam deserunt recusandae! Veritatis<br/> 
+        culpa ratione commodi aliquid iusto adipisci, impedit cupiditate animi quibusdam deserunt recusandae!
+        Veritatis<br />
         dolore
-        animi consequatur sed dolorem adipisci corporis, expedita tenetur qui voluptatem, a ducimus! Consectetur ipsa<br/> 
+        animi consequatur sed dolorem adipisci corporis, expedita tenetur qui voluptatem, a ducimus! Consectetur
+        ipsa<br />
         tempora
-        quo alias quia eaque incidunt quis distinctio dignissimos? Accusamus itaque voluptatem autem unde fuga<br/> 
+        quo alias quia eaque incidunt quis distinctio dignissimos? Accusamus itaque voluptatem autem unde fuga<br />
         voluptates dolores,
-        rerum possimus error velit dolore officia eaque deleniti quasi rem consectetur minus qui doloribus dolorem<br/> 
+        rerum possimus error velit dolore officia eaque deleniti quasi rem consectetur minus qui doloribus dolorem<br />
         corrupti! Mollitia
-        ea dolore error, fuga placeat cumque odit delectus harum ad optio provident et libero dolor. Minima, dicta, quos<br/> 
+        ea dolore error, fuga placeat cumque odit delectus harum ad optio provident et libero dolor. Minima, dicta,
+        quos<br />
         officiis natus
-        reprehenderit ullam magnam necessitatibus atque harum suscipit dolorem? Quasi cum, explicabo pariatur unde non<br/> 
+        reprehenderit ullam magnam necessitatibus atque harum suscipit dolorem? Quasi cum, explicabo pariatur unde
+        non<br />
         saepe ipsa doloremque
-        blanditiis earum minima reprehenderit necessitatibus maxime fuga, voluptate aperiam itaque iure. At eaque quasi<br/> 
+        blanditiis earum minima reprehenderit necessitatibus maxime fuga, voluptate aperiam itaque iure. At eaque
+        quasi<br />
         beatae voluptate,
-        amet sequi ex quod dolores consequuntur ullam nihil ab dolor distinctio vitae cumque ipsum neque fuga<br/> 
+        amet sequi ex quod dolores consequuntur ullam nihil ab dolor distinctio vitae cumque ipsum neque fuga<br />
         dignissimos adipisci totam. Fugit.</p>
 
     <ul>
         <li>
-            <h2>Сет мороженных рожков</h2>
-            <img src="../img/ice.jpg" alt="Сет мороженных рожков" width="600"><br/>
-            <p>Прекрасное предложение для тех кто хочет окрасить свой отдых в яркие тона и освежиться в жаркую погоду.<br/> 
-                Препочитаете ягоды - тогда вкус вишни и жимолости произведут на вас впечатление.<br/> 
-                Для люителей мороженого с яркими фруктовыми вкусами - тогда ваш выбор клубника и аплеьсин.<br/> 
+            <h2 class="all-sub-headers">Сет мороженных рожков</h2>
+            <img src="../img/ice.jpg" alt="Сет мороженных рожков" width="600"><br />
+            <p class="all-paragraphs">Прекрасное предложение для тех кто хочет окрасить свой отдых в яркие тона и освежиться в жаркую
+                погоду.<br />
+                Препочитаете ягоды - тогда вкус вишни и жимолости произведут на вас впечатление.<br />
+                Для люителей мороженого с яркими фруктовыми вкусами - тогда ваш выбор клубника и аплеьсин.<br />
                 И конечно же не забываемые вкусы фисташкого и мендального мороженого </p>
         </li>
         <li>
-            <h2>Сет мороженого льда</h2>
-            <img src="../img/ice_cream.jpg" alt="Сет мороженого льда" width="600"><br/>
-            <p>Невероятную линейку вкуса предлагает - Сет мороженого люда. Сет создан для любой кампании.<br/> 
-                Неважно любите ли вы сладкое, кислое, фрукты, ягоды, экзотику - все это вы найдете в данном сете.<br/> 
+            <h2 class="all-sub-headers">Сет мороженого льда</h2>
+            <img src="../img/ice_cream.jpg" alt="Сет мороженого льда" width="600"><br />
+            <p class="all-paragraphs">Невероятную линейку вкуса предлагает - Сет мороженого люда. Сет создан для любой кампании.<br />
+                Неважно любите ли вы сладкое, кислое, фрукты, ягоды, экзотику - все это вы найдете в данном сете.<br />
                 Бомба разнообразия для самых жарких вечеринок.</p>
         </li>
         <li>
-            <h2>Сет мороженого апельсинка</h2>
+            <h2 class="all-sub-headers">Сет мороженого апельсинка</h2>
             <img src="../img/orange_ice.jpg" alt="Сет мороженого апельсинка" width="600">
-            <p>Для тех кто хочет привнести в свою буднюю жизнь ярких, пестрых и сочных тонов, есть невероятное предложение - Сет мороженого с ярким вкусом апельсина.<br/>
+            <p class="all-paragraphs">Для тех кто хочет привнести в свою буднюю жизнь ярких, пестрых и сочных тонов, есть невероятное
+                предложение - Сет мороженого с ярким вкусом апельсина.<br />
                 Слова излишне. Это просто БОМБА! </p>
         </li>
     </ul>
-
-
-
-
 </body>
 
 </html>
