--- a/home_work/home_work_1/index.html
+++ b/home_work/home_work_1/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <a href="./index.html">Главная</a>
-    <a href="./catalog/catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
+    <ol>
+        <li>
+            <a class="menu-navigation-link" href="./index.html">Главная</a>
+        </li>
+        <li>
+            <a class="menu-navigation-link"  href="./catalog/catalog.html">Каталог</a>
+        </li>
+        <li>
+            <a class="menu-navigation-link"  href="#">Контакты</a>
+        </li>
+    </ol>
 
-    <h1>Главная страница</h1>
-    <h2>Добро пожаловать на сайт</h2>
-    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo saepe accusantium rerum adipisci dicta similique at nulla sit. Odit, vero.</p>
+    <h1 class="all-main-headers">Главная страница</h1>
+    <h2 class="all-sub-headers">Добро пожаловать на сайт</h2>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet saepe blanditiis commodi, facilis sapiente ratione <br/> 
-        quibusdam, atque, ipsum necessitatibus placeat itaque est reprehenderit vitae tempore vel fugit! Rem rerum explicabo, nesciunt, <br/> 
-        illo perferendis corporis similique incidunt quos officiis omnis vel cumque aut repellendus error porro, <br/> 
+    <p class="all-paragraphs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo saepe accusantium rerum adipisci dicta similique at
+        nulla sit. Odit, vero.</p>
+
+    <p class="all-paragraphs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet saepe blanditiis commodi, facilis sapiente ratione
+        <br />
+        quibusdam, atque, ipsum necessitatibus placeat itaque est reprehenderit vitae tempore vel fugit! Rem rerum
+        explicabo, nesciunt, <br />
+        illo perferendis corporis similique incidunt quos officiis omnis vel cumque aut repellendus error porro, <br />
         delectus ea deserunt modi quae quisquam. In non sint perferendis ducimus saepe consectetur minima dolorem!</p>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores vitae voluptatibus, laboriosam, aperiam quas, in esse eligendi libero <br/> 
-        possimus similique recusandae nobis ipsum harum atque doloremque ea quisquam voluptate. Tenetur numquam similique voluptatum <br/> 
+    <p class="all-paragraphs">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores vitae voluptatibus, laboriosam, aperiam
+        quas, in esse eligendi libero <br />
+        possimus similique recusandae nobis ipsum harum atque doloremque ea quisquam voluptate. Tenetur numquam
+        similique voluptatum <br />
         hic odio sint suscipit, fuga dolores nihil.</p>
 
 </body>
+
 </html>
