Home Work 3 с правками

--- a/home_work/home_work_3/index.html
+++ b/home_work/home_work_3/index.html
@@ -13,13 +13,10 @@
     <header class="header">
         <div class="header-logo">
             <img class="logo" src="./img/logo.png" alt="logo">
-            <div class="grow-be">
-                <span class="grow">Grow</span>
-                <span class="be">Be</span>
-            </div>
+            <span class="grow-be">Grow<span class="change-text-color">Be</span></span>
         </div>
         <div class="header-menu">
-            <span class="header-menu-link-orange">Home</span>
+            <span class="header-menu-link change-text-color">Home</span>
             <span class="header-menu-link">About Us</span>
             <span class="header-menu-link">Services</span>
             <span class="header-menu-link">Features</span>
@@ -31,8 +28,9 @@
 
     <div class="main-content">
         <div class="main-content-left">
-            <h1 class="main-content-left-header">SEO & Digital <br/>Marketing Your <br/>Website.</h1>
-            <p class="main-content-left-sub-header">Provide all kind of seo services and help to improve <br/>seo ranking.
+            <h1 class="main-content-left-header">SEO & Digital <br />Marketing Your <br />Website.</h1>
+            <p class="main-content-left-sub-header">Provide all kind of seo services and help to improve <br />seo
+                ranking.
                 Globally incubate standards.</p>
             <div class="main-content-buttons">
                 <button class="start">Start Now</button>
