--- a/home_work/home_work_3/index.html
+++ b/home_work/home_work_3/index.html
@@ -10,43 +10,43 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="header center">
         <div class="header-logo">
-            <img class="logo" src="./img/logo.png" alt="logo">
-            <span class="grow-be">Grow<span class="change-text-color">Be</span></span>
+            <img src="./img/logo.png" alt="logo">
+            <p class="grow-be">Grow<span class="change-text-color">Be</span></p>
         </div>
         <div class="header-menu">
-            <span class="header-menu-link change-text-color">Home</span>
-            <span class="header-menu-link">About Us</span>
-            <span class="header-menu-link">Services</span>
-            <span class="header-menu-link">Features</span>
-            <span class="header-menu-link">Team</span>
-            <span class="header-menu-link">Blog</span>
-            <span class="header-menu-link">Contact</span>
+            <a href="#" class="header-menu-link change-text-color">Home</a>
+            <a href="#" class="header-menu-link">About Us</a>
+            <a href="#" class="header-menu-link">Services</a>
+            <a href="#" class="header-menu-link">Features</a>
+            <a href="#" class="header-menu-link">Team</a>
+            <a href="#" class="header-menu-link">Blog</a>
+            <a href="#" class="header-menu-link">Contact</a>
         </div>
-    </header>
+    </div>
 
-    <div class="main-content">
+    <div class="main-content center">
         <div class="main-content-left">
-            <h1 class="main-content-left-header">SEO & Digital <br />Marketing Your <br />Website.</h1>
-            <p class="main-content-left-sub-header">Provide all kind of seo services and help to improve <br />seo
+            <h1 class="main-content-left-header">SEO & Digital Marketing Your Website.</h1>
+            <p class="main-content-left-sub-header">Provide all kind of seo services and help to improve seo
                 ranking.
                 Globally incubate standards.</p>
             <div class="main-content-buttons">
                 <button class="start">Start Now</button>
-                <span class="watch-video">Watch Video</span>
+                <a class="watch-video" href="#">Watch Video</a>
             </div>
         </div>
-        <img class="main-content-img" src="./img/content_1.png" alt="marketing-for-web-site">
+        <img src="./img/content_1.png" alt="marketing-for-web-site">
     </div>
 
-    <div class="partners-logoes">
-        <img class="logoes" src="./img/1.png" alt="liva">
-        <img class="logoes" src="./img/6.png" alt="kanba">
-        <img class="logoes" src="./img/3.png" alt="amara">
-        <img class="logoes" src="./img/4.png" alt="aven">
-        <img class="logoes" src="./img/5.png" alt="hexlab">
-        <img class="logoes" src="./img/7.png" alt="kanba">
+    <div class="partners-logoes center">
+        <img src="./img/1.png" alt="liva">
+        <img src="./img/6.png" alt="kanba">
+        <img src="./img/3.png" alt="amara">
+        <img src="./img/4.png" alt="aven">
+        <img src="./img/5.png" alt="hexlab">
+        <img src="./img/7.png" alt="kanba">
     </div>
 </body>
 
