--- a/seminar/seminar_2/index.html
+++ b/seminar/seminar_2/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header center">
             <ul class="main-header-navigation-menu">
-                <li class="main-header-navigation-menu-link">Home</li>
-                <li class="main-header-navigation-menu-link">About</li>
-                <li class="main-header-navigation-menu-link">Services</li>
-                <li class="main-header-navigation-menu-link">Blog</li>
-                <li class="main-header-navigation-menu-link">Contact</li>
+                <li class="main-header-navigation-menu-link"><a href="#">Home</a></li>
+                <li class="main-header-navigation-menu-link"><a href="#">About</a></li>
+                <li class="main-header-navigation-menu-link"><a href="#">Services</a></li>
+                <li class="main-header-navigation-menu-link"><a href="#">Blog</a></li>
+                <li class="main-header-navigation-menu-link"><a href="#">Contact</a></li>
             </ul>
     </header>
 
-    <div class="main-content">
+    <div class="main-content center">
         <div class="main-content-left">
             <h2 class="main-content-left-sub-header">Next genaretion platform</h2>
             <h1 class="main-content-left-header">Artificial intelligence & Syber security</h1>
@@ -38,7 +38,7 @@
         <img class="main-contain-img" src="./img/rocket_man.png" alt="man-and-rocket">
     </div>
 
-    <div class="partners-logo">
+    <div class="partners-logo center">
         <img src="./img/Group 400.png" alt="Logoipsum">
         <img src="./img/Group 401.png" alt="Logoipsum">
         <img src="./img/Group 402.png" alt="Logoipsum">
