Домашняя работа #4 правка №1

--- a/home_work/home_work_3/index.html
+++ b/home_work/home_work_3/index.html
@@ -28,7 +28,7 @@
 
     <div class="main-content center">
         <div class="main-content-left">
-            <h1 class="main-content-left-header">SEO & Digital Marketing Your Website.</h1>
+            <h1 class="main-content-left-header">SEO & Digital Marketing For Your Website.</h1>
             <p class="main-content-left-sub-header">Provide all kind of seo services and help to improve seo
                 ranking.
                 Globally incubate standards.</p>
