--- a/seminar/seminar_2/index.html
+++ b/seminar/seminar_2/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminar 3</title>
+    <title>Seminar</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/stryle.css">
 </head>
 
 <body>
     <header class="main-header center">
-            <ul class="main-header-navigation-menu">
-                <li class="main-header-navigation-menu-link"><a href="#">Home</a></li>
-                <li class="main-header-navigation-menu-link"><a href="#">About</a></li>
-                <li class="main-header-navigation-menu-link"><a href="#">Services</a></li>
-                <li class="main-header-navigation-menu-link"><a href="#">Blog</a></li>
-                <li class="main-header-navigation-menu-link"><a href="#">Contact</a></li>
-            </ul>
+        <ul class="main-header-navigation-menu">
+            <li class="main-header-navigation-menu-link"><a href="#">Home</a></li>
+            <li class="main-header-navigation-menu-link"><a href="#">About</a></li>
+            <li class="main-header-navigation-menu-link"><a href="#">Services</a></li>
+            <li class="main-header-navigation-menu-link"><a href="#">Blog</a></li>
+            <li class="main-header-navigation-menu-link"><a href="#">Contact</a></li>
+        </ul>
     </header>
 
     <div class="main-content center">
@@ -44,6 +44,50 @@
         <img src="./img/Group 402.png" alt="Logoipsum">
         <img src="./img/Group 403.png" alt="Logoipsum">
     </div>
+
+    <section class="awards center">
+        <div class="awards-item">
+            <img class="awards-img" src="./img/1-award.png" alt="Expert Prespective Agency Awards">
+            <h2 class="awards-subtitle">Expert Prespective Agency Awards</h2>
+            <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups.</p>
+        </div>
+        <div class="awards-item">
+            <img class="awards-img"  src="./img/2-award.png" alt="Business Prespective Global Agency Awards">
+            <h2 class="awards-subtitle">Business Prespective Global Agency Awards</h2>
+            <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups.</p>
+        </div>
+        <div class="awards-item">
+            <img class="awards-img"  src="./img/3-award.png" alt="Value for Results in Global Agency Awards">
+            <h2 class="awards-subtitle">Value for Results in Global Agency Awards</h2>
+            <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups.</p>
+        </div>
+        <div class="awards-item awards-big">
+            <img class="awards-img awards-big-img"  src="./img/6-award.png"
+                alt="In print, and publishing industries for previewing layouts and visual mockups.">
+            <h2 class="awards-subtitle awards-big-subtitle">In print, and publishing industries for previewing layouts and visual mockups.</h2>
+            <p class="awards-text awards-big-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and
+                publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text
+                commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+        </div>
+        <div class="awards-item">
+            <img class="awards-img"  src="./img/4-award.png" alt="Value for Results in Global Agency Awards">
+            <h2 class="awards-subtitle">Value for Results in Global Agency Awards</h2>
+            <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups.</p>
+        </div>
+        <div class="awards-item">
+            <img class="awards-img"  src="./img/5-award.png" alt="Value for Results in Global Agency Awards">
+            <h2 class="awards-subtitle">Value for Results in Global Agency Awards</h2>
+            <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+                previewing layouts and visual mockups.</p>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
