--- a/home_work/home_work_5/index.html
+++ b/home_work/home_work_5/index.html
@@ -115,7 +115,8 @@
     <div class="services center">
         <div class="services-title">
             <h1 class="services-header">Why You Should Choose Us.</h1>
-            <p class="services-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+            <p class="services-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+                coordinate e-business
                 applications through revolutionary catalysts.</p>
         </div>
         <div class="services-items">
