--- a/seminar/seminar_3/index.html
+++ b/seminar/seminar_3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminar</title>
+    <title>Seminar_3</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -64,7 +64,7 @@
             <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
                 previewing layouts and visual mockups.</p>
         </div>
-        <div class="awards-item awards-big">
+        <div class="awards-item awards-big display-none">
             <img class="awards-img awards-big-img"  src="./img/6-award.png"
                 alt="In print, and publishing industries for previewing layouts and visual mockups.">
             <h2 class="awards-subtitle awards-big-subtitle">In print, and publishing industries for previewing layouts and visual mockups.</h2>
@@ -73,13 +73,13 @@
                 publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text
                 commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div class="awards-item">
+        <div class="awards-item display-none">
             <img class="awards-img"  src="./img/4-award.png" alt="Value for Results in Global Agency Awards">
             <h2 class="awards-subtitle">Value for Results in Global Agency Awards</h2>
             <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
                 previewing layouts and visual mockups.</p>
         </div>
-        <div class="awards-item">
+        <div class="awards-item display-none">
             <img class="awards-img"  src="./img/5-award.png" alt="Value for Results in Global Agency Awards">
             <h2 class="awards-subtitle">Value for Results in Global Agency Awards</h2>
             <p class="awards-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
