--- a/home_work/home_work_02/index.html
+++ b/home_work/home_work_02/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HW6</title>
+    <title>HW7</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -39,32 +39,95 @@
     </header>
 
     <div class="brand_section">
-        <img src="./img/luxor_section/Layer_57.png" alt="#">
+        <img class="promo_img" src="./img/luxor_section/promo_brand.png" alt="#">
         <div class="brand_right_section">
-            <img src="./img/luxor_section/Rectangle 16 copy.png" alt="#">
-            <div class="brand_text_group">
-                <h1 class="brand_header">THE BRAND</h1>
-                <h2 class="brand_subtitle">OF LUXERIOUS <span class="change_color">FASHION</span></h2>
+            <h1 class="brand_h1">THE BRAND</h1>
+            <h2 class="brand_h2">OF LUXERIOUS <span class="change_color">FASHION</span></h2>
+        </div>
+    </div>
+
+    <div class="offer_section center">
+        <div class="offer_section_item">
+            <img class="offer_img" src="./img/offer_section/si1.jpg" alt="#">
+            <h4 class="offer_text_h4">30% OFF <br><span class="offer_text_color">FOR WOMEN</span></h4>
+        </div>
+        <div class="offer_section_item">
+            <img class="offer_img" src="./img/offer_section/si2.jpg" alt="#">
+            <h4 class="offer_text_h4">HOT DEAL <br><span class="offer_text_color">FOR MEN</span></h4>
+        </div>
+        <div class="offer_section_item">
+            <img class="offer_img" src="./img/offer_section/si3.jpg" alt="#">
+            <h4 class="offer_text_h4">NEW ARRIVALS <br><span class="offer_text_color">FOR KIDS</span></h4>
+        </div>
+        <div class="offer_section_item big_item">
+            <img class="offer_img" src="./img/offer_section/sibig.jpg" alt="#">
+            <h4 class="offer_text_h4">LUXIROUS & TRENDY <br><span class="offer_text_color">ACCESORIES</span></h4>
+        </div>
+    </div>
+
+    <div class="featured_section center">
+        <div class="featured_items_header">
+            <h2 class="featured_h2">Featured Items</h2>
+            <p class="featured_text">Shop for items based on what we featured in this week</p>
+        </div>
+        <div class="featured_s_cards center">
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/1.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
+            </div>
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/2.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
+            </div>
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/3.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
+            </div>
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/4.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
+            </div>
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/5.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
+            </div>
+            <div class="featured_s_c_item">
+                <img class="featured_img" src="./img/featured_sect/6.png" alt="#">
+                <div class="featured_card_content">
+                    <h2 class="featured_item_h2">ELLERY X M'O CAPSULE</h2>
+                    <p class="featured_item_text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="featured_price">$52.00</p>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="offer_section">
-        <div class="offer_section_item">
-            <img src="./img/offer_section/1_pic.svg" alt="#">
-            <p class="offer_text">30% OFF
-                FOR WOMEN</p>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
+<button class="featured_button">Browse All Product</button>
 
 
 
