HW_9 1первое исправление из миллиона

--- a/home_work/home_work_9/index.html
+++ b/home_work/home_work_9/index.html
@@ -189,7 +189,7 @@
                 <div class="footer_center_left">
                     <img class="footer_center_left_img" src="./img/footer/center/woman.png" alt="#">
                     <p class="footer_center_left_text">
-                        “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="text_itlalic">
+                        “Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="text_italic">
                             a pulvinar purus condimentum“</span>
                     </p>
                 </div>
